# VoiceChangerF1

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  soundtouch_jni.cpp
app/src/main/java/com/voice/changer/sound/effects/recorder/: VoiceChangerApp.java
app/src/main/java/com/voice/changer/sound/effects/recorder/audio/: AudioPlayerManager.java  AudioProcessor.java  AudioRecorderManager.java  PcmIo.java  SoundTouchBridge.java  WaveformAnalyzer.java
app/src/main/java/com/voice/changer/sound/effects/recorder/di/: AppComponent.java  AppModule.java  AudioModule.java  DatabaseModule.java
app/src/main/java/com/voice/changer/sound/effects/recorder/service/: PrankSoundService.java
app/src/main/res/anim/: pulse_record.xml  slide_in_right.xml  slide_out_left.xml
app/src/main/res/drawable/: bg_effect_selected.xml  bg_effect_unselected.xml  bg_feature_card.xml  bg_home_hero.xml  bg_prank_hero.xml  bg_recording_gradient.xml  bg_reverse_hero.xml  bg_round_blue_btn.xml  bg_switch_hero.xml
app/src/main/res/layout/: activity_add_effect.xml  activity_home.xml  activity_prank_sound.xml  activity_recording.xml  activity_reverse_voice.xml  activity_saved_recordings.xml  activity_settings.xml  activity_switch_voice.xml  activity_text_to_audio.xml  item_effect_grid.xml  item_prank_sound.xml  item_recording.xml
app/src/main/res/menu/: menu_home.xml  menu_saved_recordings.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
(+83 files in other folders)
